[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-crawler"
version = "1.0.0"
description = "Native Instagram crawler using instagrapi with multi-output support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Data Engineering Team"},
]

dependencies = [
    "instagrapi>=2.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "kafka-python>=2.0.0",
    "greenstalk>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "pyquery>=2.0.0",
    "faker>=22.0.0",
    "python-dateutil>=2.8.0",
    "dateparser>=1.2.0",
    "pytz>=2024.1",
    "jmespath>=1.0.0",
    "lxml>=5.0.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["source"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
